syntax = "proto3";

option java_multiple_files = true;
option java_package = "citi.eqrisk.shared.riskfeed";
option java_outer_classname = "RiskFeedProto";
option objc_class_prefix = "RF";

package riskfeed;

// The RiskFeed service definition.
service RiskFeed {
  rpc SubscribeFeed (FeedRequest) returns (stream RiskData) {}
}

// The request message containing the subscriber identifier.
message FeedRequest {
  string subscriberId = 1;
}

// The response message containing the RiskFeed
message RiskData {
  int32 positionId = 1;
  string symbol = 2;
  int32 quantity = 3;
  double spot = 4;
}
